<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/bg">

    <TextView
        android:id="@+id/textView"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="142dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textSize="30dp"
        android:textColor="@color/white"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="121dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="116dp"
        app:srcCompat="@drawable/install_thre" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"

        android:layout_marginHorizontal="35dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="36dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/input_reg"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        android:paddingLeft="16dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextEmailAddress"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="35dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="36dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:hint="@string/input_pas"
        android:inputType="textPassword"
        android:padding="14dp"
        android:paddingLeft="16dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextTextEmailAddress2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="62dp"
        android:layout_marginHorizontal="38dp"
        android:text="@string/registration_but"
        android:textSize="22dp"
        android:padding="7dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="84dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/textView4"
        android:text="@string/registration_pred"
        android:textColor="@color/white"
        android:textAlignment="textEnd" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="2dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:onClick="goRegtwo"
        android:text="@string/registration_link"
        android:textAlignment="textStart"
        android:textColor="@color/white" />

</RelativeLayout>